; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/bsd/dos/extr_19896.c_rand_n.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/bsd/dos/extr_19896.c_rand_n.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@RAND_MAX = common dso_local global double 0.000000e+00, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @rand_n(i64 %0) #0 {
  %2 = alloca i64, align 8
  store i64 %0, i64* %2, align 8
  %3 = load i64, i64* %2, align 8
  %4 = sitofp i64 %3 to float
  %5 = call float (...) @rand()
  %6 = fmul float %4, %5
  %7 = fpext float %6 to double
  %8 = load double, double* @RAND_MAX, align 8
  %9 = fadd double %8, 1.000000e+00
  %10 = fdiv double %7, %9
  %11 = fptosi double %10 to i32
  %12 = add nsw i32 1, %11
  ret i32 %12
}

declare dso_local float @rand(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
